// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`is an EOD message 1`] = `
<div>
  <h1>
    EOD Updates
  </h1>
  <div>
    <h2>
      Category 1
    </h2>
    <ul>
      <li>
        some content (Some author)
      </li>
      <li>
        more content (Another author)
      </li>
    </ul>
  </div>
  <div>
    <h2>
      Category 2
    </h2>
    <ul>
      <li>
        even more content (Some author)
      </li>
    </ul>
  </div>
  <div>
    Delivered by The EOD Machine
  </div>
</div>
`;

exports[`is an empty EOD message when there are no entries 1`] = `
<div>
  <h1>
    EOD Updates
  </h1>
  <div>
    No updates this time.
  </div>
  <div>
    Delivered by The EOD Machine
  </div>
</div>
`;
